Fix part of z-index issues in Toronto page, and improve look

--- a/src/react-components/Toronto/SidePanel/SafetyInfo/styles.css
+++ b/src/react-components/Toronto/SidePanel/SafetyInfo/styles.css
@@ -31,5 +31,5 @@
 }
 
 div.MuiBackdrop-root{
-    z-index: 1;
+    z-index: 2;
 }
