--- a/src/react-components/Toronto/Timeline/MessageList/styles.css
+++ b/src/react-components/Toronto/Timeline/MessageList/styles.css
@@ -1,5 +1,5 @@
 #messageList {
   top: 20px;
   position: relative;
-
+  z-index: 0;
 }
