--- a/src/react-components/Toronto/TopBar/styles.css
+++ b/src/react-components/Toronto/TopBar/styles.css
@@ -1,6 +1,6 @@
 /* styles for top bar component */
 .topBar {
-  z-index: 0;
+  z-index: 1;
   position: fixed;
   top: 0;
   width: 100%;
